--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-enhanced-treemap",
 	"version": "1.0.0",
-	"description": "This is a plugin for Obsidian (https://obsidian.md)",
+	"description": "This is an Obsidian (https://obsidian.md) plugin for creating enhanced treemaps",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
