--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-enhanced-treemap",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"description": "This is an Obsidian (https://obsidian.md) plugin for creating enhanced treemaps",
 	"main": "main.js",
 	"scripts": {
@@ -23,6 +23,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"d3": "^7.8.4"
+		"d3": "^7.8.4",
+		"d3-svg-to-png": "^0.3.1"
 	}
 }
