--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "enhanced-treemap",
-	"version": "1.3.4",
+	"version": "1.3.5",
 	"description": "This is an Obsidian (https://obsidian.md) plugin for creating enhanced treemaps",
 	"main": "main.js",
 	"scripts": {
@@ -10,7 +10,7 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "MIT",
+	"license": "GNU GPL V3",
 	"devDependencies": {
 		"@types/d3": "^7.4.0",
 		"@types/node": "^16.11.6",
