--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"id": "enhanced-treemap",
 	"name": "Enhanced Treemap",
-	"version": "1.3.5",
+	"version": "1.3.6",
 	"minAppVersion": "0.15.0",
-	"description": "This is an Obsidian (https://obsidian.md) plugin for creating enhanced treemaps.",
+	"description": "Create enhanced treemaps in Obsidian.",
 	"author": "Erik Shelley"
 }
