--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "enhanced-treemap",
-	"version": "1.3.5",
-	"description": "This is an Obsidian (https://obsidian.md) plugin for creating enhanced treemaps",
+	"version": "1.3.6",
+	"description": "Create enhanced treemaps in Obsidian.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
