--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"id": "enhanced-treemap",
 	"name": "Enhanced Treemap",
-	"version": "1.3.6",
+	"version": "1.3.7",
 	"minAppVersion": "0.15.0",
-	"description": "Create enhanced treemaps in Obsidian.",
+	"description": "Create enhanced treemaps.",
 	"author": "Erik Shelley"
 }
