--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "enhanced-treemap",
-	"version": "1.3.6",
-	"description": "Create enhanced treemaps in Obsidian.",
+	"version": "1.3.7",
+	"description": "Create enhanced treemaps.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
